--- a/AgenciaFiscalNegocio/pom.xml
+++ b/AgenciaFiscalNegocio/pom.xml
@@ -12,4 +12,11 @@
         <exec.mainClass>com.mycompany.agenciafiscalpersistencia.AgenciaFiscalPersistencia</exec.mainClass>
     </properties>
     <name>AgenciaFiscalNegocio</name>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>AgenciaFiscalPersistencia</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
