--- a/AgenciaFiscalPresentacion/pom.xml
+++ b/AgenciaFiscalPresentacion/pom.xml
@@ -10,6 +10,17 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>AgenciaFiscalNegocio</artifactId>
             <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.mycompany</groupId>
+                    <artifactId>AgenciaFiscalPersistencia</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>AgenciaFiscalPersistencia</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
     <properties>
