--- a/AgenciaFiscalPresentacion/pom.xml
+++ b/AgenciaFiscalPresentacion/pom.xml
@@ -17,6 +17,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>AgenciaFiscalPersistencia</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
